--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Welcome to DevOps certification training</h1>
 Doing some changes in remote repo
 Doing some changes in remote repo
+Doing some changes in remote repo
+Doing some changes in remote repoDoing some changes in remote repo
